--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/starlight": "^0.32.2",
     "astro": "^5.1.5",
     "sharp": "^0.32.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.12",
+    "tailwindcss": "^4.0.12"
   }
 }
